--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ body{
 .skills-box{
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 1rem;
 }
 .skills-box .skills-content{
     flex: 1 1 20rem;
@@ -305,8 +305,11 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 6rem;
-    height: 5rem;
+    /* width: 6rem; */
+    /* height: 5rem; */
+    width: 4.7rem;
+    height: 4.5rem;
+    font-size: 0.82rem;
     border: var(--border);
     border-radius: .3rem;
     font-weight: 600;
@@ -317,8 +320,9 @@ body{
     box-shadow: var(--box-shadow);
 }
 .skills-content .content span i{
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: var(--main-color);
+    margin-bottom: 0.2rem;
 }
 
 /* Project Section */
